test/examples/good/explicit_forall.ml
(* Explicit universal quantification *)
val id : 'a. 'a -> 'a
let id x = x
